hello-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hello
  name: hello
  namespace: kust-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello
    spec:
      containers:
      - image: registry.ocp4.example.com:8443/redhattraining/​hello-world-nginx:latest
        name: hello-world-nginx
        ports:
        - containerPort: 8080
        resources: {}
status: {}
