hello-app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: hello
  name: hello
  namespace: kust-test
spec:
  port:
    targetPort: 8080
  to:
    kind: ""
    name: hello
    weight: null
status: {}
